--- a/templates/forum/forum.html
+++ b/templates/forum/forum.html
@@ -17,7 +17,7 @@
 
 <!-- Forum Search -->
 <form method="get" action="/results/">
-<div class="ui-widget text-center blogsearch" method="get" action="/results/">
+<div class="ui-widget text-center blogsearch">
     <i class="glyphicon glyphicon-search"></i>
     <input type="text" id="automplete-1" name="q" placeholder=" Search Subject...">
 </div>
