--- a/templates/Profile/profile.html
+++ b/templates/Profile/profile.html
@@ -6,11 +6,10 @@
         <div class="Coffees-left">
             <div class="num-coffees">
                 <!-- If User is Subscribed then show number of Coffees left for the month -->
-                {% if subscription_valid == True %}
+                {% if subscription_valid %}
                     <div>{{ coffees_left }}</div>
-                {% endif %}
                 <!-- If User is not Subscribed then show 0 Coffees left for the month -->
-                {% if subscription_valid == False %}
+                {% else %}
                     <div>0</div>
                 {% endif %}
             </div>
