--- a/templates/Profile/profile.html
+++ b/templates/Profile/profile.html
@@ -8,9 +8,13 @@
                 <!-- If User is Subscribed then show number of Coffees left for the month -->
                 {% if subscription_valid %}
                     <div>{{ coffees_left }}</div>
+                    <!-- When hovering over the number above, the user is informed what it means -->
+                    <span class="tooltiptext" >Coffees left</span>
                 <!-- If User is not Subscribed then show 0 Coffees left for the month -->
                 {% else %}
                     <div>0</div>
+                    <!-- When hovering over the number above, the user is informed what it means -->
+                    <span class="tooltiptext" >No Coffees</span>
                 {% endif %}
             </div>
         </div>
