Working on mentors advice: Changed certain commenting from # to ''' to provide labelling on functions and classes. Tell the user, if they are subscribed, on the buy page that they have to the cancel subscription before purchasing another package

--- a/templates/coffees/coffees.html
+++ b/templates/coffees/coffees.html
@@ -79,7 +79,7 @@
     <!-- If Subscribed -->
     {% if subscription_valid == True %}
         <p class="text-center text-capitalize"><u><b>Currently subscribed to {{ name }} <br></b></u> Click <b><a
-                href="#">here</a></b> to cancel subscription</p>
+                href="#">here</a></b> to cancel your subscription to be able to purchase another coffee package.</p>
     {% endif %}
 
     <!-- Table of Prices and options to Purchase -->
