--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1102,7 +1102,7 @@ input[type=text]:focus, textarea:focus {
     display: none;
     position: absolute;
     text-align: center;
-    background-color: rgba(255,255,255,0.8);
+    background-color: rgba(255, 255, 255, 0.8);
     color: #333;
     padding: 5px 10px;
     border-radius: 5px;
