Annotated code more

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,5 @@
+/*** All media queries are directly below the code it's related to for an easy find when looking for code ***/
+
 /************ BASE.HTML *************/
 .masthead {
     background-color: forestgreen;
