--- a/templates/About.html
+++ b/templates/About.html
@@ -64,7 +64,7 @@
         </div>
     </div>
 
-    <!-- About: Our Aim -->
+    <!-- About: Our Aim with certain words in 'span' tags that appear larger to break up the text for the user -->
     <div class="About-info col-sm-12"><p><span>Our Aim</span> is to provide the <span>freshest</span> coffees to our
         customers in a
         <span>friendly</span> environment. Our staff go above and beyond for our customers making sure everyone leaves
@@ -86,7 +86,7 @@
             </p>
         </div>
 
-        <!-- About: Coffee Choices Pills -->
+        <!-- About: Coffee Choices Pills. Click each pill to reveal a different coffee below -->
         <div class="col-lg-8 choices-coffee-info">
             <ul class="nav nav-pills nav-pills-coffees">
                 <li class="active"><a data-toggle="pill" href="#menu1"></a></li>
@@ -160,7 +160,7 @@
                 your coffee when you come into the store. <br> Click on each step!</p>
         </div>
 
-        <!-- About: Personalised Coffee Panels -->
+        <!-- About: Personalised Coffee Panels. User can click each step to reveal corresponding information -->
         <div class="col-lg-8">
             <br>
             <div class="panel-group" id="accordion">
