--- a/templates/blog/blogsearch.html
+++ b/templates/blog/blogsearch.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-    <!-- If no matching post titles then inform User and provide an option to go back and try again -->
+    <!-- If no matching post titles then inform user and provide an option to go back and try again -->
     {% if not posts %}
         <div class="Blogpost-img">
             <h2>Sorry, No Matches!</h2>
