--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,7 +6,7 @@
         <!-- Contact Information -->
         <div class="Contact-info col-lg-4">
 
-            <!-- Opening Hours -->
+            <!-- Opening Hours. Changes colour when hovered over to make the site more interactive. -->
             <h2>Opening hours</h2>
             <table class="table table-hover">
                 <tbody>
@@ -60,7 +60,7 @@
                 </tbody>
             </table>
 
-            <!-- Link to FAQs -->
+            <!-- Link to FAQs forum subject -->
             <a href="/threads/1"><p class="text-center">Not what you're looking for? Click the <b>Link to FAQs</b></p>
             </a>
         </div>
