--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -2,6 +2,6 @@
 
 <!-- Haven't currently used flatpages in this Website but may incorporate so leaving here for the meantime -->
 {% block content %}
-   <h2>{{ flatpage.title }}</h2>
+   {{ flatpage.title }}
    {{ flatpage.content }}
 {% endblock %}
