--- a/templates/index.html
+++ b/templates/index.html
@@ -161,7 +161,7 @@
     <!-- Home Title -->
     <h2 class="text-center home-title">Welcome to Starbex</h2>
 
-    <!-- Audio and options -->
+    <!-- Audio that automatically plays, along with options to pause, mute or play. -->
     <h3 class="text-center">
         <audio autoplay id="player" src="../media/audio/Image.mp3"></audio>
 
@@ -172,19 +172,19 @@
             <span class="glyphicon glyphicon-volume-off"></span></a>
     </h3>
 
-    <!-- Home Summary of Starbex with links -->
+    <!-- Home Summary of Starbex with links to corresponding pages -->
     <p class="text-center home-info">
         <b>Starbex</b> is your local coffee shop with a twist. We offer <a href="/prices" class="home-link">monthly
         subscription packages</a> for coffees which come with many benefits.
         Our aim is to integrate the community online and in store with our friendly and sociable environment filled with
         regulars. From <a href="/blog" class="home-link">Blogs</a> and <a href="/forum"
-                                                                              class="home-link">Forums</a> to
+                                                                          class="home-link">Forums</a> to
         Personalised coffees, <b>Starbex</b> provides a unique service to our loyal
         customers. <br><br>...So what are you waiting for? Come and have a look around our website!
         <br>
     </p>
 
-    <!-- Home Footer Link to Announcements -->
+    <!-- Home Footer Link to Announcements forum subject -->
     <p class="text-center buypagelink home-announcements">
         Keep up to date with our announcements <a href="/threads/2/"><b>here</b></a>.
         We update it weekly!</p>
