--- a/templates/price.html
+++ b/templates/price.html
@@ -24,7 +24,7 @@
         fugiat nulla pariatur.
     </p>
 
-    <!-- Terms and Conditions -->
+    <!-- Terms and Conditions link to modal below -->
     <h6 class="text-center">Please read the <a href="/prices/" data-toggle="modal" data-target="#myModal"><b>Terms and
         Conditions</b></a> before purchasing</h6>
 
@@ -107,12 +107,12 @@
     </table>
     <hr>
 
-    <!-- Link to Purchase -->
+    <!-- Link to Purchase page -->
     <p class="text-center buypagelink stretch">Like what you see? Head on over to our buy page <a href="/coffees"><b>here</b></a>.
         Don't forget to create an account first!</p>
     <hr>
 
-    <!-- Footer Information -->
+    <!-- Footer Information with option to email into the company -->
     <p class="text-center querycontact">Got a question? No worries, just email us over the query through the link below
         and one of our team will get back to you as soon as possible.
         <br>
