--- a/templates/blog/blogpostform.html
+++ b/templates/blog/blogpostform.html
@@ -6,6 +6,7 @@
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form | as_bootstrap }}
+        <!-- If successful, takes user back to the blog (with the new post) -->
         <button type="submit" class="btn btn-info">Save</button>
     </form>
 {% endblock %}
