--- a/templates/blog/postdetail.html
+++ b/templates/blog/postdetail.html
@@ -11,7 +11,7 @@
 
 
 {% block blogcontent %}
-    <!-- Blog Post Content -->
+    <!-- Blog Post Content with disqus comments -->
     <div class="news-info blogpostpage-img">{{ post.published_date }} |
         <b>Views</b> {{ post.views }} | <b>Tag</b> {{ post.tag }} | <b><a href="/blog">Back to Blog</a></b></div>
 
