--- a/templates/forum/search.html
+++ b/templates/forum/search.html
@@ -35,9 +35,9 @@
         </table>
         <p>
 
-            <!-- Back Button -->
+            <!-- Back Button to forum page -->
             <a href="/forum/" class="btn btn-primary backforum-btn">Back</a>
-            <!-- If logged in then New Thread Button -->
+            <!-- If logged in then New Thread Button (taking user to thread form) -->
             {% if user.is_authenticated %}
                 <a href="{% url 'new_thread' subject.id %}" class="btn btn-primary">New Thread</a>
             {% endif %}
