--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
         {% csrf_token %}
         {{ form| as_bootstrap }}
         <div class="form-group">
-            <!-- Submit Button -->
+            <!-- Submit Button taking user to their profile page -->
             <button type="submit" class="btn btn-primary">Login</button>
         </div>
     </form>
