--- a/templates/register.html
+++ b/templates/register.html
@@ -8,7 +8,7 @@
         {% csrf_token %}
         {{ form| as_bootstrap }}
         <div class="form-group">
-            <!-- Submit Button -->
+            <!-- Submit Button that sends user to login page -->
             <button type="submit" class="btn btn-primary">Create account</button>
         </div>
     </form>
