--- a/templates/coffees/coffees.html
+++ b/templates/coffees/coffees.html
@@ -18,7 +18,7 @@
     </p>
 
     <!-- Terms and Conditions link to modal below -->
-    <h6 lass="text-center">Please read the <a href="/prices/" data-toggle="modal" data-target="#myModal"><b>Terms and
+    <h6 class="text-center">Please read the <a href="/prices/" data-toggle="modal" data-target="#myModal"><b>Terms and
         Conditions</b></a> before purchasing</h6>
 
     <!-- Terms and Conditions Modal -->
@@ -29,7 +29,7 @@
             <div class="modal-content">
                 <div class="modal-header modal-header_tc">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h2 class="modal-title modal-title_tc">Terms & Conditions</h2>
+                    <h2 class="modal-title modal-title_tc">Terms &amp; Conditions</h2>
                 </div>
                 <div class="modal-body modal-body_tc">
                     <p><b>1.1 PURCHASES</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
