--- a/templates/price.html
+++ b/templates/price.html
@@ -36,7 +36,7 @@
             <div class="modal-content">
                 <div class="modal-header modal-header_tc">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h2 class="modal-title modal-title_tc">Terms & Conditions</h2>
+                    <h2 class="modal-title modal-title_tc">Terms &amp; Conditions</h2>
                 </div>
                 <div class="modal-body modal-body_tc">
                     <p><b>1.1 PURCHASES</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
